# aiBeTrade-stock

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
aibetrade_stock/: chat.py  eventsChat.py  fastapiWork.py  handlerCall.py  handlers.py  helper.py  postgreWork.py  t.py  tasks.py  tasksFastapi.py  tesksFastapi.py  test2.py  workBinance.py  workFlask.py
